Fix comment positioning so the comment text doesn't overlap the commenter's name

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -348,7 +348,7 @@ pre {
 	}
 	.comment-content {
 		margin-left: 100px;
-		margin-top: -60px;
+		margin-top: -40px;
 		line-height: 1.3;
 	}
 }
@@ -370,7 +370,7 @@ pre {
 		}
 		.comment-content {
 			margin-left: 80px;
-			margin-top: -50px;
+			margin-top: -30px;
 		}
 	}
 	.children {
